--- a/src/index.css
+++ b/src/index.css
@@ -4,21 +4,21 @@
 
 @font-face {
   font-family: 'SuperBrigade';
-  src: url('./assets/fonts/SuperBrigade.ttf') format('truetype');
+  src: url('./fonts/SuperBrigade.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Sddystopian';
-  src: url('./assets/fonts/Sddystopian.ttf') format('truetype');
+  src: url('./fonts/Sddystopian.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Direction';
-  src: url('./assets/fonts/Direction.ttf') format('truetype');
+  src: url('./fonts/Direction.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
