--- a/src/index.css
+++ b/src/index.css
@@ -3,21 +3,21 @@
 @tailwind utilities;
 
 @font-face {
-  font-family: 'superbrigade';
+  font-family: 'SuperBrigade';
   src: url('./fonts/superbrigade.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'sddystopian';
+  font-family: 'SDDystopian';
   src: url('./fonts/sddystopian.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'direction';
+  font-family: 'Direction';
   src: url('./fonts/direction.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
