--- a/src/fonts.css
+++ b/src/fonts.css
@@ -1,13 +1,13 @@
 @font-face {
   font-family: 'SuperBrigade';
-  src: url('./fonts/SuperBrigade.ttf') format('truetype');
+  src: url('/fonts/SuperBrigade.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Sddystopian';
-  src: url('./fonts/Sddystopian.ttf') format('truetype');
+  src: url('/fonts/Sddystopian.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
